# diffsimpy

./: .gitignore  Dockerfile  LICENSE  Readme.md  pyproject.toml  requirements.txt
example/: 1x1.ipynb  8x1_bcc_example.ipynb  8x8_exc_coil_example.ipynb  letters_to_array.py
example/data/1x1/: s_param.s2p
example/data/1x1/Field/: bfield_123.5_port1.txt  bfield_123.5_port2.txt  efield_123.5_port1.txt  efield_123.5_port2.txt
example/data/8x1/bcc_8x1_export/: s_param.s10p
example/data/8x1/bcc_8x1_export_nomts/: s_param.s2p
example/data/8x8/: s_param.s65p
example/data/8x8/Field/: bfield_123.5_port1.txt  bfield_123.5_port10.txt  bfield_123.5_port11.txt  bfield_123.5_port12.txt  bfield_123.5_port13.txt  bfield_123.5_port14.txt  bfield_123.5_port15.txt  bfield_123.5_port16.txt  bfield_123.5_port17.txt  bfield_123.5_port18.txt  bfield_123.5_port19.txt  bfield_123.5_port2.txt  bfield_123.5_port20.txt  bfield_123.5_port21.txt  bfield_123.5_port22.txt  bfield_123.5_port23.txt  bfield_123.5_port24.txt  (+113 more)
example/output/GD_1x1_Demo/: best_params.pt  best_params_output.pt  desired_field.pt
example/output/GD_8x1_BCC_Demo/: best_params.pt  best_params_output.pt  desired_field.pt
example/output/GD_8x8_DEMO/: best_params.pt  best_params_output.pt  desired_field.pt
src/: DiffSimPy.py  DiffSimPyPipeline.py  NetworkFunctions.py  OptimizationFunctions.py
test/: test_integration_3_cell.py  test_integration_Multioutput_BCC.py  test_integration_Multioutput_BCC_resonant_structure.py  test_units.py
test/testdata/3x1_volume/: s_param.s4p
test/testdata/BCC/: s_param.s2p
(+68 files in other folders)
