[build-system]
requires = ["setuptools", "wheel", "setuptools_scm>=6.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies"]
name = "diffsimpy"
requires-python = ">= 3.10"
authors = [{name = "Johannes Mueller", email = "jmller@uni-bremen.de"}]
description = "Differentiable Co-Simulation Framework for the Efficient Modelling and Optimization of Electromagnetic Circuit Cosimulations."
readme = "Readme.md"
license = {file = "LICENSE"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]